# ERP

./: .gitignore  LICENSE  README.md  docker-compose.yml  package.json  test_data.sql
apps/backend/: .env.example  Dockerfile  MIGRATION_PASSWORD_RESET_TOKEN.md  SQLITE_MIGRATION.md  pyproject.toml
apps/backend/app/: __init__.py  main.py
apps/backend/app/api/: deps.py
apps/backend/app/core/: audit.py  config.py  data_permission.py  database.py  docs.py  exceptions.py  init_db.py  init_rbac.py  logging.py  password.py  permissions.py  rate_limit.py  redis_cache.py  sanitization.py  security.py  transaction.py
apps/backend/app/models/: __init__.py  attachment.py  audit.py  batch.py  data_permission.py  finance.py  inventory.py  invoice.py  notification.py  number_rule.py  organization.py  price.py  production.py  purchase.py  quality.py  rbac.py  report.py  sales.py  serial_number.py  stock_count.py  unit.py  user.py  workflow.py
apps/backend/app/schemas/: __init__.py  attachment.py  audit.py  batch.py  data_permission.py  finance.py  inventory.py  invoice.py  notification.py  number_rule.py  organization.py  price.py  production.py  purchase.py  quality.py  rbac.py  report.py  sales.py  serial_number.py  stock_count.py  unit.py  user.py  workflow.py
apps/backend/app/services/: __init__.py  attachment.py  audit.py  auth.py  batch.py  credit.py  data_permission.py  finance.py  inventory.py  invoice.py  notification.py  number_rule.py  organization.py  (+11 more)
apps/backend/scripts/: fix_timezone.py
apps/backend/tests/: __init__.py  conftest.py  test_auth.py  test_rbac.py
(+174 files in other folders)
